deploy/k8s/order-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: foodgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports: [{containerPort: 5432}]
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: order-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: foodgo
spec:
  type: ClusterIP
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
