deploy/k8s/restaurant-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-db
  namespace: foodgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-db
  template:
    metadata:
      labels:
        app: restaurant-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports: [{containerPort: 5432}]
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: restaurant-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-db
  namespace: foodgo
spec:
  type: ClusterIP
  selector:
    app: restaurant-db
  ports:
    - port: 5432
      targetPort: 5432
