deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodgo-ingress
  namespace: foodgo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: foodgo.local
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
